--- a/gantt.html
+++ b/gantt.html
@@ -12,9 +12,9 @@
   <link rel=stylesheet href="ganttPrint.css" type="text/css" media="print">
   <link rel=stylesheet href="libs/jquery/valueSlider/mb.slider.css" type="text/css" media="print">
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-
+  <script src="libs/jquery/jquery.min.js"></script>
+  <script src="libs/jquery/jquery-ui.min.js"></script>
+  
   <script src="libs/jquery/jquery.livequery.1.1.1.min.js"></script>
   <script src="libs/jquery/jquery.timers.js"></script>
 
